# paperclip-adjacent

./: .gitignore  Cargo.toml  README.md
app/app/: routes.py
b/: Makefile  noxfile.py  pyproject.toml
b/App/: __init__.py  __main__.py  config.py  routes.py
b/App/helpers/: __init__.py  goodboy.py
b/App/models/db/: __init__.py  memcell.py  singlemeta.py  yamel.py  ystore.py
b/App/models/email/: imap.py  smtp.py
b/App/models/io/: mailbox.py  response_queue.py
b/api/: config.py
b/api/controllers/: mailman.py
b/api/models/: __init__.py
b/api/models/db/: __init__.py  memcell.py  yamel.py  ystore.py
b/api/models/email/: smtp.py
b/api/utils/: __init__.py
b/api/utils/debuggernaut/: __init__.py  jotunheim.py
b/b/tests/results/: results.xml
b/tests/: test_memcell.py  test_routes.py
docs/proposal/: proposal.html  proposal.ipynb
egui_app/: .env  .gitignore  Cargo.toml  Makefile
egui_app/src/: app.rs  main.rs
egui_app/src/client/: http.rs  mod.rs
egui_app/src/ui/: mod.rs  paperclip_adjacent.rs
egui_app/src/utils/: auth.rs
fe/: .gitignore
fe/gui/: Cargo.toml  main.rs
flask_app/: .gitignore  Makefile  noxfile.py  pyproject.toml
flask_app/api/: __main__.py  routes.py
flask_app/api/controllers/: __init__.py
flask_app/api/models/email/: __init__.py  imap.py
flask_app/api/utils/: goodboy.py  singleton.py
flask_app/api/utils/debuggernaut/: heimdahl.py
flask_app/tests/: api_sanity.sh  test_memcell.py  test_yamel.py
