[project]
name = "paperclip-adjacent"
version = "0.1.0"
dependencies = ["flask", "tinydb", "flask-cors", "pyyaml"]

[project.optional-dependencies]
dev = ["pytest", "requests", "tempfile"]

[tool.setuptools]
packages = ["App"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# --- CLI COMMANDS ---
[project.scripts]
paperclip = "App.__main__:main"