[project]
name = "paperclip-adjacent"
version = "0.1.0"
dependencies = ["flask", "tinydb", "flask-cors", "pyyaml", "python-dotenv"]

[project.optional-dependencies]
dev = ["pytest", "requests", "nox"]

[tool.setuptools]
packages = ["App"]

[tool.pytest.ini_options]
junit_family = "xunit2"
junit_suite_name = "pytest"
testpaths = ["b/tests"]
junit_logging = "all"
addopts = "--junit-xml=b/tests/results/results.xml"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# --- CLI COMMANDS ---
[project.scripts]
paperclip = "App.__main__:main"