[package]
name = "egui_app"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
egui = "0.31.1"
eframe = { version = "0.31.1", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "wayland",       # To support Linux (and CI)
    "persistence"
] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] } # async runtime
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

dotenvy = "0.15"